@@ -30,8 +30,10 @@ scribo/core/def/color_type.hh \
 scribo/core/def/lbl_type.hh \
 scribo/core/document.hh \
 scribo/core/erase_objects.hh \
+scribo/core/group_info.hh \
 scribo/core/init_integral_image.hh \
 scribo/core/internal/doc_serializer.hh \
+scribo/core/internal/sort_comp_ids.hh \
 scribo/core/line_info.hh \
 scribo/core/line_links.hh \
 scribo/core/line_set.hh \
@@ -40,9 +42,11 @@ scribo/core/object_groups.hh \
 scribo/core/object_links.hh \
 scribo/core/paragraph_info.hh \
 scribo/core/paragraph_set.hh \
+scribo/core/stats.hh \
 scribo/core/tag/anchor.hh \
 scribo/core/tag/component.hh \
 scribo/core/tag/line.hh \
+scribo/core/tag/paragraph.hh \
 scribo/debug/alignment_decision_image.hh \
 scribo/debug/all.hh \
 scribo/debug/bboxes_enlarged_image.hh \
@@ -67,20 +71,22 @@ scribo/draw/all.hh \
 scribo/draw/bounding_box_links.hh \
 scribo/draw/bounding_boxes.hh \
 scribo/draw/groups_bboxes.hh \
+scribo/draw/line_components.hh \
 scribo/estim/components_features.hh \
 scribo/estim/font_boldness.hh \
 scribo/estim/font_color.hh \
 scribo/estim/internal/compute_skeleton.hh \
-scribo/estim/object_groups_v_thickness.hh \
+scribo/estim/object_groups_mean_width.hh \
 scribo/filter/all.hh \
 scribo/filter/common/objects_photo.hh \
+scribo/filter/images_in_paragraph.hh \
 scribo/filter/internal/alignment_angle.hh \
 scribo/filter/internal/component_aligned.hh \
 scribo/filter/internal/compute.hh \
 scribo/filter/line_links_x_height.hh \
+scribo/filter/object_groups_mean_width.hh \
 scribo/filter/object_groups_size_ratio.hh \
 scribo/filter/object_groups_small.hh \
-scribo/filter/object_groups_v_thickness.hh \
 scribo/filter/object_groups_with_holes.hh \
 scribo/filter/object_links_aligned.hh \
 scribo/filter/object_links_bbox_h_ratio.hh \
@@ -96,6 +102,7 @@ scribo/filter/object_links_top_aligned.hh \
 scribo/filter/objects_h_thick.hh \
 scribo/filter/objects_h_thin.hh \
 scribo/filter/objects_large.hh \
+scribo/filter/objects_on_border.hh \
 scribo/filter/objects_size_ratio.hh \
 scribo/filter/objects_small.hh \
 scribo/filter/objects_thick.hh \
@@ -103,8 +110,16 @@ scribo/filter/objects_thin.hh \
 scribo/filter/objects_v_thick.hh \
 scribo/filter/objects_v_thin.hh \
 scribo/filter/objects_with_holes.hh \
+scribo/filter/paragraphs_bbox_overlap.hh \
+scribo/filter/paragraphs_in_borders.hh \
+scribo/filter/paragraphs_in_image.hh \
+scribo/filter/separators_in_borders.hh \
+scribo/filter/separators_in_element.hh \
+scribo/filter/separators_in_paragraph.hh \
+scribo/filter/separators_vert_in_borders.hh \
 scribo/fun/v2b/label_to_bool.hh \
 scribo/fun/v2b/objects_large_filter.hh \
+scribo/fun/v2b/objects_on_border_filter.hh \
 scribo/fun/v2b/objects_small_filter.hh \
 scribo/fun/v2v/highlight.hh \
 scribo/io/img/internal/debug_img_visitor.hh \
@@ -114,12 +129,15 @@ scribo/io/img/internal/non_text_img_visitor.hh \
 scribo/io/img/internal/text_img_visitor.hh \
 scribo/io/img/save.hh \
 scribo/io/text_boxes/save.hh \
+scribo/io/xml/internal/compute_text_colour.hh \
 scribo/io/xml/internal/extended_page_xml_visitor.hh \
 scribo/io/xml/internal/full_xml_visitor.hh \
 scribo/io/xml/internal/page_xml_visitor.hh \
 scribo/io/xml/internal/print_box_coords.hh \
 scribo/io/xml/internal/print_image_coords.hh \
 scribo/io/xml/internal/print_page_preambule.hh \
+scribo/io/xml/internal/save_image_to_xml.hh \
+scribo/io/xml/internal/time_info.hh \
 scribo/io/xml/load.hh \
 scribo/io/xml/save.hh \
 scribo/make/all.hh \
@@ -129,6 +147,7 @@ scribo/make/text_blocks_image.hh \
 scribo/make/text_components_image.hh \
 scribo/postprocessing/all.hh \
 scribo/postprocessing/fill_object_holes.hh \
+scribo/postprocessing/images_to_drop_capital.hh \
 scribo/preprocessing/all.hh \
 scribo/preprocessing/crop.hh \
 scribo/preprocessing/crop_without_localization.hh \
@@ -154,6 +173,7 @@ scribo/primitive/extract/lines_h_pattern.hh \
 scribo/primitive/extract/lines_h_single.hh \
 scribo/primitive/extract/lines_h_thick.hh \
 scribo/primitive/extract/lines_h_thick_and_single.hh \
+scribo/primitive/extract/lines_h_thick_and_thin.hh \
 scribo/primitive/extract/lines_pattern.hh \
 scribo/primitive/extract/lines_thick.hh \
 scribo/primitive/extract/lines_v_discontinued.hh \
@@ -162,6 +182,7 @@ scribo/primitive/extract/lines_v_single.hh \
 scribo/primitive/extract/lines_v_thick.hh \
 scribo/primitive/extract/lines_v_thick_and_single.hh \
 scribo/primitive/extract/non_text.hh \
+scribo/primitive/extract/non_text_hdoc.hh \
 scribo/primitive/extract/non_text_kmean.hh \
 scribo/primitive/extract/separators.hh \
 scribo/primitive/extract/separators_nonvisible.hh \
@@ -243,12 +264,18 @@ scribo/text/clean_inplace.hh \
 scribo/text/extract_lines.hh \
 scribo/text/extract_lines_with_features.hh \
 scribo/text/extract_lines_wo_merge.hh \
+scribo/text/extract_paragraphs.hh \
+scribo/text/extract_paragraphs_hdoc.hh \
 scribo/text/link_lines.hh \
 scribo/text/look_like_text_lines.hh \
 scribo/text/merging.hh \
+scribo/text/merging_hdoc.hh \
+scribo/text/paragraphs_closing.hh \
 scribo/text/recognition.hh \
 scribo/toolchain/content_in_doc.hh \
+scribo/toolchain/content_in_hdoc.hh \
 scribo/toolchain/internal/content_in_doc_functor.hh \
+scribo/toolchain/internal/content_in_hdoc_functor.hh \
 scribo/toolchain/internal/text_in_doc_functor.hh \
 scribo/toolchain/internal/text_in_doc_preprocess_functor.hh \
 scribo/toolchain/internal/toolchain_functor.hh \
@@ -257,7 +284,14 @@ scribo/toolchain/text_in_doc.hh \
 scribo/toolchain/text_in_doc_preprocess.hh \
 scribo/toolchain/text_in_picture.hh \
 scribo/upsampling/bs2x.hh \
-scribo/upsampling/eagle.hh
+scribo/upsampling/eagle.hh \
+scribo/util/box_intersection.hh \
+scribo/util/box_is_included.hh \
+scribo/util/color_to_hex.hh \
+scribo/util/component_outline.hh \
+scribo/util/component_precise_outline.hh \
+scribo/util/hex_to_color.hh \
+scribo/util/text_outline.hh
 
 #<<lrde
 nobase_include_HEADERS +=
