@@ -133,9 +133,11 @@ scribo_core_object_groups \
 scribo_core_object_links \
 scribo_core_paragraph_info \
 scribo_core_paragraph_set \
+scribo_core_stats \
 scribo_core_tag_anchor \
 scribo_core_tag_component \
 scribo_core_tag_line \
+scribo_core_tag_paragraph \
 scribo_debug_alignment_decision_image \
 scribo_debug_all \
 scribo_debug_bboxes_enlarged_image \
@@ -160,6 +162,7 @@ scribo_draw_all \
 scribo_draw_bounding_box_links \
 scribo_draw_bounding_boxes \
 scribo_draw_groups_bboxes \
+scribo_draw_line_components \
 scribo_estim_components_features \
 scribo_estim_font_boldness \
 scribo_estim_font_color \
@@ -167,6 +170,7 @@ scribo_estim_internal_compute_skeleton \
 scribo_estim_object_groups_mean_width \
 scribo_filter_all \
 scribo_filter_common_objects_photo \
+scribo_filter_images_in_paragraph \
 scribo_filter_internal_alignment_angle \
 scribo_filter_internal_component_aligned \
 scribo_filter_internal_compute \
@@ -189,6 +193,7 @@ scribo_filter_object_links_top_aligned \
 scribo_filter_objects_h_thick \
 scribo_filter_objects_h_thin \
 scribo_filter_objects_large \
+scribo_filter_objects_on_border \
 scribo_filter_objects_size_ratio \
 scribo_filter_objects_small \
 scribo_filter_objects_thick \
@@ -196,8 +201,16 @@ scribo_filter_objects_thin \
 scribo_filter_objects_v_thick \
 scribo_filter_objects_v_thin \
 scribo_filter_objects_with_holes \
+scribo_filter_paragraphs_bbox_overlap \
+scribo_filter_paragraphs_in_borders \
+scribo_filter_paragraphs_in_image \
+scribo_filter_separators_in_borders \
+scribo_filter_separators_in_element \
+scribo_filter_separators_in_paragraph \
+scribo_filter_separators_vert_in_borders \
 scribo_fun_v2b_label_to_bool \
 scribo_fun_v2b_objects_large_filter \
+scribo_fun_v2b_objects_on_border_filter \
 scribo_fun_v2b_objects_small_filter \
 scribo_fun_v2v_highlight \
 scribo_io_img_internal_debug_img_visitor \
@@ -207,11 +220,13 @@ scribo_io_img_internal_non_text_img_visitor \
 scribo_io_img_internal_text_img_visitor \
 scribo_io_img_save \
 scribo_io_text_boxes_save \
+scribo_io_xml_internal_compute_text_colour \
 scribo_io_xml_internal_extended_page_xml_visitor \
 scribo_io_xml_internal_page_xml_visitor \
 scribo_io_xml_internal_print_box_coords \
 scribo_io_xml_internal_print_image_coords \
 scribo_io_xml_internal_print_page_preambule \
+scribo_io_xml_internal_time_info \
 scribo_io_xml_save \
 scribo_make_all \
 scribo_make_debug_filename \
@@ -220,6 +235,7 @@ scribo_make_text_blocks_image \
 scribo_make_text_components_image \
 scribo_postprocessing_all \
 scribo_postprocessing_fill_object_holes \
+scribo_postprocessing_images_to_drop_capital \
 scribo_preprocessing_all \
 scribo_preprocessing_crop \
 scribo_preprocessing_crop_without_localization \
@@ -245,6 +261,7 @@ scribo_primitive_extract_lines_h_pattern \
 scribo_primitive_extract_lines_h_single \
 scribo_primitive_extract_lines_h_thick \
 scribo_primitive_extract_lines_h_thick_and_single \
+scribo_primitive_extract_lines_h_thick_and_thin \
 scribo_primitive_extract_lines_pattern \
 scribo_primitive_extract_lines_thick \
 scribo_primitive_extract_lines_v_discontinued \
@@ -253,6 +270,7 @@ scribo_primitive_extract_lines_v_single \
 scribo_primitive_extract_lines_v_thick \
 scribo_primitive_extract_lines_v_thick_and_single \
 scribo_primitive_extract_non_text \
+scribo_primitive_extract_non_text_hdoc \
 scribo_primitive_extract_non_text_kmean \
 scribo_primitive_extract_separators \
 scribo_primitive_extract_separators_nonvisible \
@@ -330,15 +348,27 @@ scribo_text_clean_inplace \
 scribo_text_extract_lines \
 scribo_text_extract_lines_with_features \
 scribo_text_extract_lines_wo_merge \
+scribo_text_extract_paragraphs \
+scribo_text_extract_paragraphs_hdoc \
 scribo_text_link_lines \
 scribo_text_look_like_text_lines \
 scribo_text_merging \
+scribo_text_merging_hdoc \
+scribo_text_paragraphs_closing \
+scribo_toolchain_content_in_hdoc \
+scribo_toolchain_internal_content_in_hdoc_functor \
 scribo_toolchain_internal_text_in_doc_preprocess_functor \
 scribo_toolchain_internal_toolchain_functor \
 scribo_toolchain_text_in_doc_preprocess \
 scribo_toolchain_text_in_picture \
 scribo_upsampling_bs2x \
-scribo_upsampling_eagle
+scribo_upsampling_eagle \
+scribo_util_box_intersection \
+scribo_util_box_is_included \
+scribo_util_color_to_hex \
+scribo_util_component_outline \
+scribo_util_component_precise_outline \
+scribo_util_hex_to_color
 
 scribo_all_SOURCES = scribo_all.cc
 scribo_binarization_all_SOURCES = scribo_binarization_all.cc
@@ -379,9 +409,11 @@ scribo_core_object_groups_SOURCES = scribo_core_object_groups.cc
 scribo_core_object_links_SOURCES = scribo_core_object_links.cc
 scribo_core_paragraph_info_SOURCES = scribo_core_paragraph_info.cc
 scribo_core_paragraph_set_SOURCES = scribo_core_paragraph_set.cc
+scribo_core_stats_SOURCES = scribo_core_stats.cc
 scribo_core_tag_anchor_SOURCES = scribo_core_tag_anchor.cc
 scribo_core_tag_component_SOURCES = scribo_core_tag_component.cc
 scribo_core_tag_line_SOURCES = scribo_core_tag_line.cc
+scribo_core_tag_paragraph_SOURCES = scribo_core_tag_paragraph.cc
 scribo_debug_alignment_decision_image_SOURCES = scribo_debug_alignment_decision_image.cc
 scribo_debug_all_SOURCES = scribo_debug_all.cc
 scribo_debug_bboxes_enlarged_image_SOURCES = scribo_debug_bboxes_enlarged_image.cc
@@ -406,6 +438,7 @@ scribo_draw_all_SOURCES = scribo_draw_all.cc
 scribo_draw_bounding_box_links_SOURCES = scribo_draw_bounding_box_links.cc
 scribo_draw_bounding_boxes_SOURCES = scribo_draw_bounding_boxes.cc
 scribo_draw_groups_bboxes_SOURCES = scribo_draw_groups_bboxes.cc
+scribo_draw_line_components_SOURCES = scribo_draw_line_components.cc
 scribo_estim_components_features_SOURCES = scribo_estim_components_features.cc
 scribo_estim_font_boldness_SOURCES = scribo_estim_font_boldness.cc
 scribo_estim_font_color_SOURCES = scribo_estim_font_color.cc
@@ -413,6 +446,7 @@ scribo_estim_internal_compute_skeleton_SOURCES = scribo_estim_internal_compute_s
 scribo_estim_object_groups_mean_width_SOURCES = scribo_estim_object_groups_mean_width.cc
 scribo_filter_all_SOURCES = scribo_filter_all.cc
 scribo_filter_common_objects_photo_SOURCES = scribo_filter_common_objects_photo.cc
+scribo_filter_images_in_paragraph_SOURCES = scribo_filter_images_in_paragraph.cc
 scribo_filter_internal_alignment_angle_SOURCES = scribo_filter_internal_alignment_angle.cc
 scribo_filter_internal_component_aligned_SOURCES = scribo_filter_internal_component_aligned.cc
 scribo_filter_internal_compute_SOURCES = scribo_filter_internal_compute.cc
@@ -435,6 +469,7 @@ scribo_filter_object_links_top_aligned_SOURCES = scribo_filter_object_links_top_
 scribo_filter_objects_h_thick_SOURCES = scribo_filter_objects_h_thick.cc
 scribo_filter_objects_h_thin_SOURCES = scribo_filter_objects_h_thin.cc
 scribo_filter_objects_large_SOURCES = scribo_filter_objects_large.cc
+scribo_filter_objects_on_border_SOURCES = scribo_filter_objects_on_border.cc
 scribo_filter_objects_size_ratio_SOURCES = scribo_filter_objects_size_ratio.cc
 scribo_filter_objects_small_SOURCES = scribo_filter_objects_small.cc
 scribo_filter_objects_thick_SOURCES = scribo_filter_objects_thick.cc
@@ -442,8 +477,16 @@ scribo_filter_objects_thin_SOURCES = scribo_filter_objects_thin.cc
 scribo_filter_objects_v_thick_SOURCES = scribo_filter_objects_v_thick.cc
 scribo_filter_objects_v_thin_SOURCES = scribo_filter_objects_v_thin.cc
 scribo_filter_objects_with_holes_SOURCES = scribo_filter_objects_with_holes.cc
+scribo_filter_paragraphs_bbox_overlap_SOURCES = scribo_filter_paragraphs_bbox_overlap.cc
+scribo_filter_paragraphs_in_borders_SOURCES = scribo_filter_paragraphs_in_borders.cc
+scribo_filter_paragraphs_in_image_SOURCES = scribo_filter_paragraphs_in_image.cc
+scribo_filter_separators_in_borders_SOURCES = scribo_filter_separators_in_borders.cc
+scribo_filter_separators_in_element_SOURCES = scribo_filter_separators_in_element.cc
+scribo_filter_separators_in_paragraph_SOURCES = scribo_filter_separators_in_paragraph.cc
+scribo_filter_separators_vert_in_borders_SOURCES = scribo_filter_separators_vert_in_borders.cc
 scribo_fun_v2b_label_to_bool_SOURCES = scribo_fun_v2b_label_to_bool.cc
 scribo_fun_v2b_objects_large_filter_SOURCES = scribo_fun_v2b_objects_large_filter.cc
+scribo_fun_v2b_objects_on_border_filter_SOURCES = scribo_fun_v2b_objects_on_border_filter.cc
 scribo_fun_v2b_objects_small_filter_SOURCES = scribo_fun_v2b_objects_small_filter.cc
 scribo_fun_v2v_highlight_SOURCES = scribo_fun_v2v_highlight.cc
 scribo_io_img_internal_debug_img_visitor_SOURCES = scribo_io_img_internal_debug_img_visitor.cc
@@ -453,11 +496,13 @@ scribo_io_img_internal_non_text_img_visitor_SOURCES = scribo_io_img_internal_non
 scribo_io_img_internal_text_img_visitor_SOURCES = scribo_io_img_internal_text_img_visitor.cc
 scribo_io_img_save_SOURCES = scribo_io_img_save.cc
 scribo_io_text_boxes_save_SOURCES = scribo_io_text_boxes_save.cc
+scribo_io_xml_internal_compute_text_colour_SOURCES = scribo_io_xml_internal_compute_text_colour.cc
 scribo_io_xml_internal_extended_page_xml_visitor_SOURCES = scribo_io_xml_internal_extended_page_xml_visitor.cc
 scribo_io_xml_internal_page_xml_visitor_SOURCES = scribo_io_xml_internal_page_xml_visitor.cc
 scribo_io_xml_internal_print_box_coords_SOURCES = scribo_io_xml_internal_print_box_coords.cc
 scribo_io_xml_internal_print_image_coords_SOURCES = scribo_io_xml_internal_print_image_coords.cc
 scribo_io_xml_internal_print_page_preambule_SOURCES = scribo_io_xml_internal_print_page_preambule.cc
+scribo_io_xml_internal_time_info_SOURCES = scribo_io_xml_internal_time_info.cc
 scribo_io_xml_save_SOURCES = scribo_io_xml_save.cc
 scribo_make_all_SOURCES = scribo_make_all.cc
 scribo_make_debug_filename_SOURCES = scribo_make_debug_filename.cc
@@ -466,6 +511,7 @@ scribo_make_text_blocks_image_SOURCES = scribo_make_text_blocks_image.cc
 scribo_make_text_components_image_SOURCES = scribo_make_text_components_image.cc
 scribo_postprocessing_all_SOURCES = scribo_postprocessing_all.cc
 scribo_postprocessing_fill_object_holes_SOURCES = scribo_postprocessing_fill_object_holes.cc
+scribo_postprocessing_images_to_drop_capital_SOURCES = scribo_postprocessing_images_to_drop_capital.cc
 scribo_preprocessing_all_SOURCES = scribo_preprocessing_all.cc
 scribo_preprocessing_crop_SOURCES = scribo_preprocessing_crop.cc
 scribo_preprocessing_crop_without_localization_SOURCES = scribo_preprocessing_crop_without_localization.cc
@@ -491,6 +537,7 @@ scribo_primitive_extract_lines_h_pattern_SOURCES = scribo_primitive_extract_line
 scribo_primitive_extract_lines_h_single_SOURCES = scribo_primitive_extract_lines_h_single.cc
 scribo_primitive_extract_lines_h_thick_SOURCES = scribo_primitive_extract_lines_h_thick.cc
 scribo_primitive_extract_lines_h_thick_and_single_SOURCES = scribo_primitive_extract_lines_h_thick_and_single.cc
+scribo_primitive_extract_lines_h_thick_and_thin_SOURCES = scribo_primitive_extract_lines_h_thick_and_thin.cc
 scribo_primitive_extract_lines_pattern_SOURCES = scribo_primitive_extract_lines_pattern.cc
 scribo_primitive_extract_lines_thick_SOURCES = scribo_primitive_extract_lines_thick.cc
 scribo_primitive_extract_lines_v_discontinued_SOURCES = scribo_primitive_extract_lines_v_discontinued.cc
@@ -499,6 +546,7 @@ scribo_primitive_extract_lines_v_single_SOURCES = scribo_primitive_extract_lines
 scribo_primitive_extract_lines_v_thick_SOURCES = scribo_primitive_extract_lines_v_thick.cc
 scribo_primitive_extract_lines_v_thick_and_single_SOURCES = scribo_primitive_extract_lines_v_thick_and_single.cc
 scribo_primitive_extract_non_text_SOURCES = scribo_primitive_extract_non_text.cc
+scribo_primitive_extract_non_text_hdoc_SOURCES = scribo_primitive_extract_non_text_hdoc.cc
 scribo_primitive_extract_non_text_kmean_SOURCES = scribo_primitive_extract_non_text_kmean.cc
 scribo_primitive_extract_separators_SOURCES = scribo_primitive_extract_separators.cc
 scribo_primitive_extract_separators_nonvisible_SOURCES = scribo_primitive_extract_separators_nonvisible.cc
@@ -576,13 +624,25 @@ scribo_text_clean_inplace_SOURCES = scribo_text_clean_inplace.cc
 scribo_text_extract_lines_SOURCES = scribo_text_extract_lines.cc
 scribo_text_extract_lines_with_features_SOURCES = scribo_text_extract_lines_with_features.cc
 scribo_text_extract_lines_wo_merge_SOURCES = scribo_text_extract_lines_wo_merge.cc
+scribo_text_extract_paragraphs_SOURCES = scribo_text_extract_paragraphs.cc
+scribo_text_extract_paragraphs_hdoc_SOURCES = scribo_text_extract_paragraphs_hdoc.cc
 scribo_text_link_lines_SOURCES = scribo_text_link_lines.cc
 scribo_text_look_like_text_lines_SOURCES = scribo_text_look_like_text_lines.cc
 scribo_text_merging_SOURCES = scribo_text_merging.cc
+scribo_text_merging_hdoc_SOURCES = scribo_text_merging_hdoc.cc
+scribo_text_paragraphs_closing_SOURCES = scribo_text_paragraphs_closing.cc
+scribo_toolchain_content_in_hdoc_SOURCES = scribo_toolchain_content_in_hdoc.cc
+scribo_toolchain_internal_content_in_hdoc_functor_SOURCES = scribo_toolchain_internal_content_in_hdoc_functor.cc
 scribo_toolchain_internal_text_in_doc_preprocess_functor_SOURCES = scribo_toolchain_internal_text_in_doc_preprocess_functor.cc
 scribo_toolchain_internal_toolchain_functor_SOURCES = scribo_toolchain_internal_toolchain_functor.cc
 scribo_toolchain_text_in_doc_preprocess_SOURCES = scribo_toolchain_text_in_doc_preprocess.cc
 scribo_toolchain_text_in_picture_SOURCES = scribo_toolchain_text_in_picture.cc
 scribo_upsampling_bs2x_SOURCES = scribo_upsampling_bs2x.cc
 scribo_upsampling_eagle_SOURCES = scribo_upsampling_eagle.cc
+scribo_util_box_intersection_SOURCES = scribo_util_box_intersection.cc
+scribo_util_box_is_included_SOURCES = scribo_util_box_is_included.cc
+scribo_util_color_to_hex_SOURCES = scribo_util_color_to_hex.cc
+scribo_util_component_outline_SOURCES = scribo_util_component_outline.cc
+scribo_util_component_precise_outline_SOURCES = scribo_util_component_precise_outline.cc
+scribo_util_hex_to_color_SOURCES = scribo_util_hex_to_color.cc
 
